package controller;

import javax.swing.*;

public abstract class ImageCommand extends AbstractAction {
}
