package controller;

import java.awt.event.ActionEvent;
import java.awt.event.ActionListener;

public class TranslateCommand extends ImageCommand {
    @Override
    public void actionPerformed(ActionEvent actionEvent) {

    }

    public void translate(){

    }
}
