package controller;

import java.awt.event.ActionEvent;
import java.awt.event.ActionListener;

public class ZoomCommand extends PerspectiveCommand{

    @Override
    public void actionPerformed(ActionEvent actionEvent) {

    }

    public void zoom(){

    }

    public void zoomIn(){

    }

    public void zoomOut(){

    }
}
