@startuml

title __CONTROLLER's Class Diagram__\n

  namespace controller {
    class controller.CommandManager {
        - commands : ArrayList
        {static} - mngr : CommandManager
        {static} + getInstance()
        + redo()
        + undo()
        - CommandManager()
    }
  }
  

  namespace controller {
    abstract class controller.ImageCommand {
    }
  }
  

  namespace controller {
    class controller.TranslateCommand {
        + actionPerformed()
        + translate()
    }
  }
  

  namespace controller {
    class controller.ZoomCommand {
        + actionPerformed()
        + zoom()
        + zoomIn()
        + zoomOut()
    }
  }
  

  controller.ImageCommand -up-|> javax.swing.AbstractAction
  controller.TranslateCommand -up-|> controller.ImageCommand
  controller.ZoomCommand -up-|> controller.ImageCommand


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
